@@ -80,3 +80,5 @@
   Removed a redundant variable, useDividers, from FrameworkSettings
   PostgreSQL table status query disabled since the function greatest is missing
   FrameworkSettings now Map based, useQueryRange now defaults to false
+  Fixed a serious bug in Entity.getReferencedKey, where key values were cached on entityID instead of Property, fu**ing up the case where a table referenced the same table more than once
+  Fixed a bug in Entity.doSetValue, it did not propogate the reference values when the new value was null, since it simply checked if the new value was an instance of Entity
